tests/expectations/compiler/field/no_space_between_literal.out
Error [EPAR0370005]: expected '&&', '||', '&', '|', '^', '==', '!=', '<', '<=', '>', '>=', '+', '-', '*', '/', '**', '%', '<<', '>>', '[', '.', ';', '?', 'as' -- found 'field'
    --> compiler-test:4:17
     |
   4 |       let f = 1 field;
     |                 ^^^^^
